Rewrite fix for #554.
* Don't use z-index: that makes upload-progress dialog invisible.
* Set heights of hidden elements to 0: that makes scrollbar right height

--- a/app/assets/stylesheets/DocumentSet/index.less
+++ b/app/assets/stylesheets/DocumentSet/index.less
@@ -57,18 +57,20 @@ body.document-set-index {
       top: 0;
       left: 0;
       width: 100%;
-      z-index: -1;
-      .transition(opacity .35s ease-in-out);
+      height: 0;
+      overflow: hidden;
+      .transition(~"opacity .35s ease-in-out, height .35s ease-in-out");
     }
 
     #jobs-and-document-sets {
       background: @bodyBackground;
       position: relative;
-      z-index: 1;
-      .transition(~"opacity .35s ease-in-out, left .35s ease-in-out");
+      height: auto;
+      .transition(~"opacity .35s ease-in-out, left .35s ease-in-out, height .35s ease-in-out");
     }
 
     &[data-import-pane]>#jobs-and-document-sets {
+      height: 0;
       left: -100%;
       .opacity(0);
     }
@@ -77,8 +79,7 @@ body.document-set-index {
     &[data-import-pane="shared"]>#import-shared,
     &[data-import-pane="from-documentcloud-account"]>#import-from-documentcloud-account,
     &[data-import-pane="from-upload"]>#import-from-upload {
-      left: 0;
-      z-index: 0;
+      height: auto;
       .opacity(100);
     }
   }
